tests/bad/objects/1.lat
class A {
    void x() {

    }

    int x() {
        return 0;
    }
}

int main () {return 0;}